--- a/app/docker/configs/telegraf.conf
+++ b/app/docker/configs/telegraf.conf
@@ -1064,6 +1064,24 @@
 ###############################################################################
 #                            INPUT PLUGINS                                    #
 ###############################################################################
+#
+[[inputs.kibana]]
+  ## specify a list of one or more Kibana servers
+  servers = ["http://kibana:5601"]
+
+  ## Timeout for HTTP requests
+  timeout = "5s"
+
+  ## HTTP Basic Auth credentials
+  # username = "username"
+  # password = "pa$$word"
+
+  ## Optional TLS Config
+  # tls_ca = "/etc/telegraf/ca.pem"
+  # tls_cert = "/etc/telegraf/cert.pem"
+  # tls_key = "/etc/telegraf/key.pem"
+  ## Use TLS but skip chain & host verification
+  # insecure_skip_verify = false
 
 # Read metrics about cpu usage
 [[inputs.cpu]]
@@ -2307,111 +2325,111 @@
 #   # insecure_skip_verify = false
 
 
-# # Read metrics from one or many mysql servers
-# [[inputs.mysql]]
-#   ## specify servers via a url matching:
-#   ##  [username[:password]@][protocol[(address)]]/[?tls=[true|false|skip-verify|custom]]
-#   ##  see https://github.com/go-sql-driver/mysql#dsn-data-source-name
-#   ##  e.g.
-#   ##    servers = ["user:passwd@tcp(127.0.0.1:3306)/?tls=false"]
-#   ##    servers = ["user@tcp(127.0.0.1:3306)/?tls=false"]
-#   #
-#   ## If no servers are specified, then localhost is used as the host.
-#   servers = ["tcp(127.0.0.1:3306)/"]
-#
-#   ## Selects the metric output format.
+# Read metrics from one or many mysql servers
+[[inputs.mysql]]
+  ## specify servers via a url matching:
+  ##  [username[:password]@][protocol[(address)]]/[?tls=[true|false|skip-verify|custom]]
+  ##  see https://github.com/go-sql-driver/mysql#dsn-data-source-name
+  ##  e.g.
+  ##    servers = ["user:passwd@tcp(127.0.0.1:3306)/?tls=false"]
+  ##    servers = ["user@tcp(127.0.0.1:3306)/?tls=false"]
+  #
+  ## If no servers are specified, then localhost is used as the host.
+  servers = ["root:$DAB_SERVICES_MYSQL_ROOT_PASSWORD@tcp(mysql:3306)/?tls=false"]
+
+  ## Selects the metric output format.
+  ##
+  ## This option exists to maintain backwards compatibility, if you have
+  ## existing metrics do not set or change this value until you are ready to
+  ## migrate to the new format.
+  ##
+  ## If you do not have existing metrics from this plugin set to the latest
+  ## version.
+  ##
+  ## Telegraf >=1.6: metric_version = 2
+  ##           <1.6: metric_version = 1 (or unset)
+  metric_version = 2
+
+  ## the limits for metrics form perf_events_statements
+  perf_events_statements_digest_text_limit  = 120
+  perf_events_statements_limit              = 250
+  perf_events_statements_time_limit         = 86400
+  #
+  ## if the list is empty, then metrics are gathered from all databasee tables
+  table_schema_databases                    = []
+  #
+  ## gather metrics from INFORMATION_SCHEMA.TABLES for databases provided above list
+  gather_table_schema                       = false
+  #
+  ## gather thread state counts from INFORMATION_SCHEMA.PROCESSLIST
+  gather_process_list                       = true
+  #
+  ## gather thread state counts from INFORMATION_SCHEMA.USER_STATISTICS
+  gather_user_statistics                    = false
+  #
+  ## gather auto_increment columns and max values from information schema
+  gather_info_schema_auto_inc               = true
+  #
+  ## gather metrics from INFORMATION_SCHEMA.INNODB_METRICS
+  gather_innodb_metrics                     = true
+  #
+  ## gather metrics from SHOW SLAVE STATUS command output
+  gather_slave_status                       = true
+  #
+  ## gather metrics from SHOW BINARY LOGS command output
+  gather_binary_logs                        = false
+  #
+  ## gather metrics from PERFORMANCE_SCHEMA.TABLE_IO_WAITS_SUMMARY_BY_TABLE
+  gather_table_io_waits                     = false
+  #
+  ## gather metrics from PERFORMANCE_SCHEMA.TABLE_LOCK_WAITS
+  gather_table_lock_waits                   = false
+  #
+  ## gather metrics from PERFORMANCE_SCHEMA.TABLE_IO_WAITS_SUMMARY_BY_INDEX_USAGE
+  gather_index_io_waits                     = false
+  #
+  ## gather metrics from PERFORMANCE_SCHEMA.EVENT_WAITS
+  gather_event_waits                        = false
+  #
+  ## gather metrics from PERFORMANCE_SCHEMA.FILE_SUMMARY_BY_EVENT_NAME
+  gather_file_events_stats                  = false
+  #
+  ## gather metrics from PERFORMANCE_SCHEMA.EVENTS_STATEMENTS_SUMMARY_BY_DIGEST
+  gather_perf_events_statements             = false
+  #
+  ## Some queries we may want to run less often (such as SHOW GLOBAL VARIABLES)
+  interval_slow                   = "30m"
+
+  ## Optional TLS Config (will be used if tls=custom parameter specified in server uri)
+  # tls_ca = "/etc/telegraf/ca.pem"
+  # tls_cert = "/etc/telegraf/cert.pem"
+  # tls_key = "/etc/telegraf/key.pem"
+  ## Use TLS but skip chain & host verification
+  # insecure_skip_verify = false
+
+
+# Provides metrics about the state of a NATS server
+[[inputs.nats]]
+  ## The address of the monitoring endpoint of the NATS server
+  server = "http://nats:8222"
+
+  ## Maximum time to receive response
+  # response_timeout = "5s"
+
+
+# # Read metrics about network interface usage
+# [[inputs.net]]
+#   ## By default, telegraf gathers stats from any up interface (excluding loopback)
+#   ## Setting interfaces will tell it to gather these explicit interfaces,
+#   ## regardless of status.
 #   ##
-#   ## This option exists to maintain backwards compatibility, if you have
-#   ## existing metrics do not set or change this value until you are ready to
-#   ## migrate to the new format.
+#   # interfaces = ["eth0"]
 #   ##
-#   ## If you do not have existing metrics from this plugin set to the latest
-#   ## version.
+#   ## On linux systems telegraf also collects protocol stats.
+#   ## Setting ignore_protocol_stats to true will skip reporting of protocol metrics.
 #   ##
-#   ## Telegraf >=1.6: metric_version = 2
-#   ##           <1.6: metric_version = 1 (or unset)
-#   metric_version = 2
-#
-#   ## the limits for metrics form perf_events_statements
-#   perf_events_statements_digest_text_limit  = 120
-#   perf_events_statements_limit              = 250
-#   perf_events_statements_time_limit         = 86400
-#   #
-#   ## if the list is empty, then metrics are gathered from all databasee tables
-#   table_schema_databases                    = []
-#   #
-#   ## gather metrics from INFORMATION_SCHEMA.TABLES for databases provided above list
-#   gather_table_schema                       = false
-#   #
-#   ## gather thread state counts from INFORMATION_SCHEMA.PROCESSLIST
-#   gather_process_list                       = true
-#   #
-#   ## gather thread state counts from INFORMATION_SCHEMA.USER_STATISTICS
-#   gather_user_statistics                    = true
-#   #
-#   ## gather auto_increment columns and max values from information schema
-#   gather_info_schema_auto_inc               = true
-#   #
-#   ## gather metrics from INFORMATION_SCHEMA.INNODB_METRICS
-#   gather_innodb_metrics                     = true
-#   #
-#   ## gather metrics from SHOW SLAVE STATUS command output
-#   gather_slave_status                       = true
-#   #
-#   ## gather metrics from SHOW BINARY LOGS command output
-#   gather_binary_logs                        = false
-#   #
-#   ## gather metrics from PERFORMANCE_SCHEMA.TABLE_IO_WAITS_SUMMARY_BY_TABLE
-#   gather_table_io_waits                     = false
-#   #
-#   ## gather metrics from PERFORMANCE_SCHEMA.TABLE_LOCK_WAITS
-#   gather_table_lock_waits                   = false
-#   #
-#   ## gather metrics from PERFORMANCE_SCHEMA.TABLE_IO_WAITS_SUMMARY_BY_INDEX_USAGE
-#   gather_index_io_waits                     = false
-#   #
-#   ## gather metrics from PERFORMANCE_SCHEMA.EVENT_WAITS
-#   gather_event_waits                        = false
-#   #
-#   ## gather metrics from PERFORMANCE_SCHEMA.FILE_SUMMARY_BY_EVENT_NAME
-#   gather_file_events_stats                  = false
-#   #
-#   ## gather metrics from PERFORMANCE_SCHEMA.EVENTS_STATEMENTS_SUMMARY_BY_DIGEST
-#   gather_perf_events_statements             = false
-#   #
-#   ## Some queries we may want to run less often (such as SHOW GLOBAL VARIABLES)
-#   interval_slow                   = "30m"
-#
-#   ## Optional TLS Config (will be used if tls=custom parameter specified in server uri)
-#   # tls_ca = "/etc/telegraf/ca.pem"
-#   # tls_cert = "/etc/telegraf/cert.pem"
-#   # tls_key = "/etc/telegraf/key.pem"
-#   ## Use TLS but skip chain & host verification
-#   # insecure_skip_verify = false
-
-
-# # Provides metrics about the state of a NATS server
-# [[inputs.nats]]
-#   ## The address of the monitoring endpoint of the NATS server
-#   server = "http://localhost:8222"
-#
-#   ## Maximum time to receive response
-#   # response_timeout = "5s"
-
-
-# Read metrics about network interface usage
-[[inputs.net]]
-  ## By default, telegraf gathers stats from any up interface (excluding loopback)
-  ## Setting interfaces will tell it to gather these explicit interfaces,
-  ## regardless of status.
-  ##
-  # interfaces = ["eth0"]
-  ##
-  ## On linux systems telegraf also collects protocol stats.
-  ## Setting ignore_protocol_stats to true will skip reporting of protocol metrics.
-  ##
-  # ignore_protocol_stats = false
-  ##
+#   # ignore_protocol_stats = false
+#   ##
 
 
 # Collect response time of a TCP or UDP connection
@@ -2477,16 +2495,16 @@
 #   endpoints = ["http://localhost:4151"]
 
 
-# Collect kernel snmp counters and network interface statistics
-[[inputs.nstat]]
-  ## file paths for proc files. If empty default paths will be used:
-  ##    /proc/net/netstat, /proc/net/snmp, /proc/net/snmp6
-  ## These can also be overridden with env variables, see README.
-  proc_net_netstat = "/proc/net/netstat"
-  proc_net_snmp = "/proc/net/snmp"
-  proc_net_snmp6 = "/proc/net/snmp6"
-  ## dump metrics with 0 values too
-  dump_zeros       = true
+# # Collect kernel snmp counters and network interface statistics
+# [[inputs.nstat]]
+#   ## file paths for proc files. If empty default paths will be used:
+#   ##    /proc/net/netstat, /proc/net/snmp, /proc/net/snmp6
+#   ## These can also be overridden with env variables, see README.
+#   proc_net_netstat = "/proc/net/netstat"
+#   proc_net_snmp = "/proc/net/snmp"
+#   proc_net_snmp6 = "/proc/net/snmp6"
+#   ## dump metrics with 0 values too
+#   dump_zeros       = true
 
 
 # # Get standard NTP query metrics, requires ntpq executable.
