--- a/app/docker/docker-compose.services.yml
+++ b/app/docker/docker-compose.services.yml
@@ -8,6 +8,10 @@ services:
     labels:
       description: 'Time series database from the TICK stack'
       com.centurylinklabs.watchtower.enable: 'true'
+    environment:
+      INFLUXDB_DATA_QUERY_LOG_ENABLED: 'false'
+      INFLUXDB_HTTP_LOG_ENABLED: 'false'
+      INFLUXDB_HTTP_PPROF_ENABLED: 'false'
     volumes:
       - influxdb:/var/lib/influxdb
     healthcheck:
