Always run dab with a tty for consistent tool usage
Should resolve issues blocking users

Fixes #163

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,6 @@ jobs:
             sudo mv ~/docker-compose /usr/local/bin/docker-compose
       - run:
           name: Acceptance Tests
-          command: ./scripts/test.sh --order=random --retry=1
+          command: script -qec './scripts/test.sh --order=random --retry=1'
           environment:
             TEST_DOCKER: local
