Add remote-syslog2 to services, can now ingest file into dab chronograf
Adds a docker volume named dab_logs where any .log files will be
ingested from.

Fixes #123

--- a/app/docker/docker-compose.deps.yml
+++ b/app/docker/docker-compose.deps.yml
@@ -5,6 +5,9 @@ services:
   chronograf:
     depends_on:
       - influxdb
+      - telegraf
+      - logspout
+      - remote-syslog2
 
   kapacitor:
     depends_on:
