Add dive to apps
Fixes #187

--- a/app/docker/docker-compose.apps.yml
+++ b/app/docker/docker-compose.apps.yml
@@ -668,6 +668,21 @@ services:
       DATABASE_HOST: postgres
       DATABASE_USERNAME: postgres
 
+  dive:
+    container_name: dab_dive
+    build:
+      context: .
+      dockerfile: Dockerfile.dive
+      args:
+        - "DIVE_VERSION=${DAB_APPS_DIVE_VERSION:-0.3.0}"
+    labels:
+      description: 'A tool for exploring each layer in a docker image'
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+    restart: on-failure
+    tmpfs:
+      - /tmp
+
 volumes:
   chronograf:
   consul:
