--- a/app/subcommands/apps/config
+++ b/app/subcommands/apps/config
@@ -4,8 +4,8 @@
 # vim: ft=sh ts=4 sw=4 sts=4 noet
 set -euf
 
-# shellcheck disable=SC1091
-. ./lib/docker.sh
+# shellcheck disable=SC1090
+. "$DAB/lib/docker.sh"
 
 [ -n "${1:-}" ] || fatality 'must provide a app name'
 
