--- a/tests/docker-compose.local.yml
+++ b/tests/docker-compose.local.yml
@@ -18,3 +18,7 @@ services:
   build:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+
+  tourist:
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
