set some apps to restart and auto update

--- a/app/docker/docker-compose.apps.yml
+++ b/app/docker/docker-compose.apps.yml
@@ -5,6 +5,7 @@ services:
   watchtower:
     container_name: dab_watchtower
     image: v2tec/watchtower:latest
+    restart: always
     labels:
       description: 'Watches labelled container images for updates and applies them'
       com.centurylinklabs.watchtower.enable: 'true'
@@ -40,6 +41,7 @@ services:
     image: "telegraf:${DAB_APPS_TELEGRAF_TAG:-alpine}"
     labels:
       description: 'Metrics collection agent from the TICK stack'
+      com.centurylinklabs.watchtower.enable: 'true'
     depends_on:
       - influxdb
       - docker-gen
@@ -659,10 +661,12 @@ services:
   huginn:
     container_name: dab_huginn
     image: "huginn/huginn:${DAB_APPS_HUGINN_TAG:-latest}"
+    restart: always
     depends_on:
       - postgres
     labels:
       description: 'Create agents that monitor and act on your behalf`admin`password'
+      com.centurylinklabs.watchtower.enable: 'true'
     environment:
       DATABASE_ADAPTER: postgresql
       DATABASE_HOST: postgres
