--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,7 @@ jobs:
             sudo mv ~/docker-compose /usr/local/bin/docker-compose
       - run:
           name: Slower Tests
-          command: script -qec './scripts/tagged_tests.sh @ci'
+          command: script -qec './scripts/test.sh'
           environment:
             TEST_DOCKER: local
+            TEST_TAGS: '@ci'
