--- a/app/docker/docker-compose.apps.yml
+++ b/app/docker/docker-compose.apps.yml
@@ -687,6 +687,24 @@ services:
     tmpfs:
       - /tmp
 
+  selenium:
+    container_name: dab_selenium
+    image: "selenium/standalone-${DAB_APPS_SELENIUM_VARIANT:-firefox}:${DAB_APPS_SELENIUM_TAG:-latest}"
+    restart: always
+    depends_on:
+      - postgres
+    labels:
+      description: 'Browser automation``secret'
+      com.centurylinklabs.watchtower.enable: 'true'
+    shm_size: '2gb'
+    environment:
+      START_XVFB: 'true'
+    networks:
+      - lab
+    expose:
+      - 4444
+      - 5900
+
 volumes:
   chronograf:
   consul:
