--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,8 +11,15 @@ jobs:
             chmod +x ~/docker-compose
             sudo mv ~/docker-compose /usr/local/bin/docker-compose
       - run:
-          name: Slower Tests
+          name: Smoke Tests
           command: script -qec './scripts/test.sh'
           environment:
             TEST_DOCKER: local
-            TEST_TAGS: '@ci'
+            TEST_TAGS: '@smoke'
+
+      - run:
+          name: Major Acceptance Tests
+          command: script -qec './scripts/test.sh'
+          environment:
+            TEST_DOCKER: local
+            TEST_TAGS: '@ci and ~@smoke'
