--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,13 @@ jobs:
             chmod +x ~/docker-compose
             sudo mv ~/docker-compose /usr/local/bin/docker-compose
       - run:
+          name: Profile
+          command: script -qec './scripts/test.sh'
+          environment:
+            TEST_DOCKER: local
+            TEST_TAGS: '@profiling'
+
+      - run:
           name: Slower Tests
           command: script -qec './scripts/test.sh'
           environment:
